# agentwall

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
agentwall/: __init__.py  api.py  cli.py
agentwall/audit/: emitter.py  opentelemetry_sink.py  sentinel_sink.py  sqlite_sink.py
agentwall/classifiers/: __init__.py  ai_language.py  base.py  prompt_shield.py  rule_engine.py
agentwall/core/: __init__.py  action.py  context.py  event.py  evidence.py  payload.py  pipeline.py  severity.py
agentwall/dashboard/: app.py  charts.py  cli.py  repo.py
agentwall/integrations/: __init__.py  autogen_v04.py  semantic_kernel.py
agentwall/normalizer/: __init__.py  encoding.py  models.py  normalizer.py  structure.py  unicode.py  whitespace.py
agentwall/output/: __init__.py  secrets.py  system_prompt_leak.py  validator.py
agentwall/policy/: __init__.py  engine.py  loader.py  models.py
agentwall/policy/builtin/: moderate.yaml  permissive.yaml  strict.yaml
agentwall/scoring/: __init__.py  scorer.py
agentwall/vectors/: mcp_poisoning.py  tool_scope.py
agentwall/vectors/data/: injection_patterns.yaml
demo/: demo_mcp_server.py  mcp_server.py  protected.py  unprotected.py
docs/: ARCHITECTURE.md  ATTACK_VECTORS.md  POLICY_REFERENCE.md
live_demo/: README.md  agt_engine.py  app.py  attack_scenarios.py  mock_llm.py  panel.py  styles.css
scripts/: build_wheel.sh  start.sh
tests/: conftest.py
tests/attacks/: test_all.py
tests/integration/: test_autogen_v04.py  test_pipeline.py
tests/unit/classifiers/: test_rule_engine.py
tests/unit/core/: test_event.py  test_evidence.py  test_payload.py
tests/unit/normalizer/: test_encoding.py  test_normalizer.py  test_unicode.py
tests/unit/output/: test_secrets.py
tests/unit/policy/: test_engine.py  test_loader.py
tests/unit/scoring/: test_scorer.py
tests/unit/vectors/: test_mcp_poisoning.py  test_tool_scope.py
