[build-system]
requires = ["hatchling>=1.18,<2.0"]
build-backend = "hatchling.build"

[project]
name = "agentwall"
version = "0.1.0"
description = "Security middleware for AI agents — one line of code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Arnav Vashishtha", email = "arnav.vashishtha@example.com" }
]
keywords = [
    "ai-security",
    "prompt-injection",
    "autogen",
    "semantic-kernel",
    "azure",
    "agents",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.6,<3.0",
    "pyyaml>=6.0",
    "azure-ai-contentsafety>=1.0.0",
    "azure-ai-textanalytics>=5.3.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.6.0",
    "regex>=2024.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
autogen = ["autogen-agentchat>=0.4.0,<0.5.0", "autogen-ext[openai,azure]>=0.4.0"]
autogen-v02 = ["ag2>=0.7.0"]
semantic-kernel = ["semantic-kernel>=1.10.0,<2.0.0"]
mcp = ["mcp>=1.0.0"]
dashboard = ["streamlit>=1.32.0", "plotly>=5.20.0", "pandas>=2.2.0"]
sentinel = ["azure-monitor-ingestion>=1.0.0"]
demo = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
all = [
    "agentwall[autogen,semantic-kernel,mcp,dashboard,sentinel,demo]",
]

[project.urls]
Homepage = "https://github.com/Arnavvs/agentwall"
Repository = "https://github.com/Arnavvs/agentwall"
Issues = "https://github.com/Arnavvs/agentwall/issues"

[project.scripts]
agentwall = "agentwall.cli:main"
agentwall-dashboard = "agentwall.dashboard.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
    "respx>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["node_modules", "agentwall_deck.js"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["agentwall"]
